Agregando style.css al index.html

--- a/index.html
+++ b/index.html
@@ -4,9 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pagina Aprendiendo Git</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>APRENDIENDO GIT</h1>
-    
+    <p>Mis primeros pasos en el versionado de codigo desde la rama principal</p>
+    <ul>
+        <li>Elmento 1</li>
+        <li>Elmento 2</li>
+        <li>Elmento 3</li>
+        <li>Elmento 4</li>
+        <li>Elmento 5</li>
+        <li>Elmento 6</li>
+    </ul>
 </body>
 </html>
