Agregando contenido a las estaciones del año

--- a/index.html
+++ b/index.html
@@ -17,7 +17,12 @@
         <li>Elmento 5</li>
         <li>Elmento 6</li>
     </ul>
-
+    <ol>
+        <li>Primavera</li>
+        <li>Otoño</li>
+        <li>Verano</li>
+        <li>Invierno</li>
+    </ol>
     <script src="index.js"></script>
     
 </body>
