Agregando contenido a las estaciones del año con fecha de inicio

--- a/index.html
+++ b/index.html
@@ -17,7 +17,12 @@
         <li>Elmento 5</li>
         <li>Elmento 6</li>
     </ul>
-
+    <ol>
+        <li>Primavera - 21 marzo</li>
+        <li>Otoño - 21 septiembre</li>
+        <li>Verano - 21 junio</li>
+        <li>Invierno - 21 diciembre</li>
+    </ol>
     <script src="index.js"></script>
     
 </body>
