Agregando dos parrafos

--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="es"> <!--Lenguaje español-->
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pagina Aprendiendo Git</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <h1>APRENDIENDO GIT</h1>
     <p>Mis primeros pasos en el versionado de codigo y aprendiendo a resolver conflictos entre ramas</p>
@@ -23,6 +25,12 @@
         <li>Verano - 21 junio</li>
         <li>Invierno - 21 diciembre</li>
     </ol>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam soluta, tenetur temporibus debitis, culpa earum
+        rerum, dolorum modi sunt ex commodi neque eveniet itaque. Sed quo placeat atque possimus perferendis!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam soluta, tenetur temporibus debitis, culpa earum
+        rerum, dolorum modi sunt ex commodi neque eveniet itaque. Sed quo placeat atque possimus perferendis!</p>
+        
     <script src="index.js"></script>
 </body>
+
 </html>
